--- a/IBLT.csproj
+++ b/IBLT.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="MessagePack" Version="3.1.3" /> 
   </ItemGroup>
 
 </Project>
