--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /.vs/IBLT
 /bin/Debug
 /obj
-/Tests/bin/Debug/net8.0
+/Tests/bin/*
 /Tests/obj
 /.vs/ProjectEvaluation
-/IBLT/bin/Debug/net8.0
+/IBLT/bin/*
 /IBLT/obj
