--- a/ChecksumCosmosClient/ChecksumCosmosClient.csproj
+++ b/ChecksumCosmosClient/ChecksumCosmosClient.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.12.*" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.*" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.52.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
