--- a/TestConsoleApp/query.sample
+++ b/TestConsoleApp/query.sample
@@ -1,6 +1,6 @@
 // FOR HEALTH SCENARIO
 START FROM resource
-SELECT key = match(serviceGroupMember.sourceId, "/subscription/{*}/")
+EXTEND key = CSHARP(`match(serviceGroupMember.sourceId, "/subscription/{*}/")`)
 USEINDEX SUBSCRIPTION_TO_HEALTH 
 FILTER index != null
 RETURN resource.id, index.healthId
@@ -8,17 +8,20 @@ RETURN resource.id, index.healthId
 
 DEFINE INDEX SUBSCRIPTION_TO_HEALTH
 START FROM serviceGroupMember 
-SELECT s = match(serviceGroupMember.sourceId, "/subscription/{*}/"), t = serviceGroupMember.targetId
-USEFUNCTION keys = ANCESTORS t
+EXTEND s = CSHARP(`match(serviceGroupMember.sourceId, "/subscription/{*}/")`), keys = ANCESTORS(serviceGroupMember.targetId)
 USEINDEXFORARRAY HEALTH_RESOURCES
 CREATE key = s, index
 
 
 DEFINE INDEX HEALTH_RESOURCES
 START FROM healthResource
-EXTEND sgid = match(healthResource.id, "{*}/providers/Microsoft.Health*")
+EXTEND sgid = CSHARP(`match(healthResource.id, "{*}/providers/Microsoft.Health*")`)
 CREATE key = sgid, {healthId : healthResource.id}
 
+
+DEFINE FUNCTION ANCESTORS
+PARAMS string
+RETURNS string[]
 
 
 
