--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -11,11 +11,14 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="MSTest" Version="3.6.4" />
     <PackageReference Include="MessagePack" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.52.0.0" />
+    <PackageReference Include="Testcontainers.CosmosDb" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\IBLT\IBLT.csproj" />
     <ProjectReference Include="..\LiveGraph\LiveGraph.csproj" />
+    <ProjectReference Include="..\ChecksumCosmosClient\ChecksumCosmosClient.csproj" />
   </ItemGroup>
 
   <ItemGroup>
